# ROS

./: .gitignore
src/collision_detection_system/: CMakeLists.txt  package.xml
src/collision_detection_system/config/: collision_detection_system.yaml
src/collision_detection_system/include/collision_detection_system/: collision_detection_system.hpp  collision_detection_system_node.hpp  param_geometry.hpp
src/collision_detection_system/src/: collision_detection_system.cpp  collision_detection_system_node.cpp  main.cpp
src/communication/: CMakeLists.txt  package.xml
src/communication/action/: MoveTo.action
src/communication/msg/: RobotStatus.msg
src/communication/srv/: SetDeviceParameter.srv
src/diagnostic_manager/: CMakeLists.txt  package.xml
src/diagnostic_manager/include/diagnostic_manager/: diagnostic_manager.hpp  diagnostic_manager_node.hpp
src/diagnostic_manager/src/: diagnostic_manager.cpp  diagnostic_manager_node.cpp  main.cpp
src/large_motor_interface/: CMakeLists.txt  package.xml  plugin_description.xml
src/large_motor_interface/include/large_motor_interface/: large_motor_interface.hpp
src/large_motor_interface/src/: large_motor_interface.cpp
src/map_grid/: CMakeLists.txt  package.xml
src/map_grid/config/: robot.yaml
src/map_grid/include/map_grid/: map_grid.hpp  map_grid_node.hpp
src/map_grid/launch/: mars.launch.py
src/map_grid/src/: main.cpp  map_grid.cpp  map_grid_node.cpp
src/medium_motor_interface/: CMakeLists.txt  package.xml  plugin_description.xml
src/medium_motor_interface/src/: medium_motor_interface.cpp
src/motor_ev3/: CMakeLists.txt  package.xml
src/motor_ev3/include/motor_ev3/: motor_ev3.hpp  motor_ev3_node.hpp
src/motor_ev3/src/: motor_ev3.cpp  motor_ev3_node.cpp
src/planner/: CMakeLists.txt  package.xml
src/planner/include/planner/: planner.hpp  planner_node.hpp
src/planner/src/: planner.cpp  planner_node.cpp
src/pose/: CMakeLists.txt  package.xml
src/pose/include/pose/: pose_estimator.hpp  pose_node.hpp
src/pose/src/: pose_estimator.cpp  pose_node.cpp
src/recorder/: CMakeLists.txt  package.xml
src/recorder/include/recorder/: recorder_node.hpp
src/recorder/src/: main.cpp  recorder_node.cpp
src/sensor_acceleration_interface/: CMakeLists.txt  package.xml  plugin_description.xml  plugin_description.xml.bak  readme.md
src/sensor_acceleration_interface/config/: sensor_acceleration_interface.yaml
src/sensor_acceleration_interface/description/: sensor_acceleration_interface.urdf.xacro
src/sensor_acceleration_interface/launch/: module_launch.py
src/sensor_acceleration_interface/src/: sensor_acceleration_interface.cpp
src/sensor_accelerometer/: CMakeLists.txt  package.xml
src/sensor_accelerometer/include/: sensor_accelerometer.hpp
src/sensor_accelerometer/src/: sensor_accelerometer.cpp
src/sensor_color_interface/: CMakeLists.txt  package.xml  plugin_description.xml
src/sensor_compass_interface/: CMakeLists.txt  CMakeLists.txt.bak  package.xml  plugin_description.xml
src/sensor_compass_interface/config/: sensor_compass_interface.yaml
src/sensor_compass_interface/description/: sensor_compass_interface.urdf.xacro
src/sensor_compass_interface/include/sensor_compass_interface/: sensor_compass_interface.hpp
src/sensor_compass_interface/src/: sensor_compass_interface.cpp
src/sensor_gyro/: CMakeLists.txt  package.xml
src/sensor_gyro/include/sensor_gyro/: sensor_gyro.hpp
src/sensor_gyro/src/: sensor_gyro.cpp
src/sensor_gyro_interface/: CMakeLists.txt  package.xml  plugin_description.xml  readme.md
src/sensor_gyro_interface/config/: sensor_gyro_interface.yaml
src/sensor_gyro_interface/description/: sensor_gyro_interface.urdf.xacro
src/sensor_gyro_interface/include/sensor_gyro_interface/: sensor_gyro_interface.hpp
src/sensor_gyro_interface/src/: sensor_gyro_interface.cpp
src/sensor_infrared_interface/: CMakeLists.txt  package.xml  plugin_description.xml  readme.md
src/sensor_rangefinder/: CMakeLists.txt  package.xml
src/sensor_touch/: CMakeLists.txt  package.xml
src/sensor_touch/include/sensor_touch/: sensor_touch.hpp  sensor_touch_types.hpp
src/sensor_touch/src/: sensor_touch.cpp
src/sensor_touch_interface/: CMakeLists.txt  package.xml  plugin_description.xml
src/sensor_touch_interface/config/: sensor_touch_interface.yaml
src/sensor_touch_interface/description/: sensor_touch_interface.urdf.xacro
src/sensor_touch_interface/include/sensor_touch_interface/: sensor_touch_interface.hpp
src/sensor_touch_interface/launch/: module_launch.py
src/sensor_touch_interface/src/: sensor_touch_interface.cpp
src/sensor_ultrasonic_interface/: CMakeLists.txt  package.xml  plugin_description.xml  readme.md
src/sensor_ultrasonic_interface/config/: sensor_ultrasonic_interface.yaml
src/sensor_ultrasonic_interface/description/: sensor_ultrasonic_interface.urdf.xacro  ultrasonic_bot.sdf
src/sensor_ultrasonic_interface/include/sensor_ultrasonic_interface/: sensor_ultrasonic_interface.hpp
src/sensor_ultrasonic_interface/launch/: module_launch.py
src/sensor_ultrasonic_interface/src/: sensor_ultrasonic_interface.cpp
src/state_manager/: CMakeLists.txt  package.xml  readme.md
src/state_manager/config/: state_manager.yaml
src/state_manager/include/state_manager/: state_manager.hpp  state_manager_node.hpp
src/state_manager/src/: main.cpp  state_manager.cpp  state_manager_node.cpp
src/traction_system_interface/: CMakeLists.txt  package.xml  plugin_description.xml  readme.md
src/traction_system_interface/config/: traction_system_interface.yaml
src/traction_system_interface/description/: traction_system_interface.urdf.xacro
src/traction_system_interface/include/traction_system_interface/: traction_system_interface.hpp
src/traction_system_interface/launch/: robot_launch.py
src/traction_system_interface/src/: traction_system_interface.cpp
src/vda5050_210/: CMakeLists.txt  package.xml
src/vda5050_210/msg/: action.idl  batterystate.idl  edge.idl  error.idl  header.idl  node.idl  order.idl  state.idl  visualization.idl
(+12 files in other folders)
