<?xml version="1.0"?>
<package format="3">
  <name>collision_detection_system</name>
  <version>0.1.0</version>
  <description>Minimal touch sensor interface for ROS 2 control</description>
  <maintainer email="ToCap@github.com">ToCap</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for building -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Dependencies for execution -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rclcpp_components register_node="CollisionDetectionNode"/>
  </export>
</package>
