<?xml version="1.0"?>
<package format="3">
  <name>map_grid</name>
  <version>0.1.0</version>
  <description>Grid map node with lifecycle support</description>
  <maintainer email="you@example.com">ToCap</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>