<?xml version="1.0"?>
<package format="3">
  <name>motor_ev3</name>
  <version>0.0.1</version>
  <description>Simple pose estimator node based on wheel encoders and gyro</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>GPL-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
