<?xml version="1.0"?>
<package format="3">
  <name>pose</name>
  <version>0.0.1</version>
  <description>Simple pose estimator node based on wheel encoders and gyro</description>
  <maintainer email="ToCap@github.com">ToCap</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
