<?xml version="1.0"?>
<package format="3">
  <name>sensor_touch_interface</name>
  <version>0.1.0</version>
  <description>Minimal Lego Mindstorm EV3 touch sensor interface for ROS 2 control</description>
  <maintainer email="ToCap@github.com">ToCap</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>std_msgs</depend>
  <depend>pluginlib</depend>
  <depend>pal_statistics</depend>
  <depend>pal_statistics_msgs</depend>
  <depend>realtime_tools</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
